add sort functionality, post voting functionality. make cosmetic changes to the app to give a better user experience

--- a/readable-app/src/index.css
+++ b/readable-app/src/index.css
@@ -7,3 +7,12 @@ body {
 .smallMargin {
   margin: 1px;
 }
+
+.cursorPointer {
+  cursor: pointer;
+}
+
+.alignMiddle {
+  vertical-align: middle;
+  padding-top: 15px;
+}
